# ofws-old

./: Cargo.toml  README.md
design/programming/: naming.adoc  serialization.adoc
ofws_core/: Cargo.toml
ofws_core/examples/: attribute.rs  biome.rs  tile.rs
ofws_core/src/: lib.rs
ofws_core/src/data/: color.rs  mod.rs  selector.rs  size2d.rs
ofws_core/src/data/generator/: composition.rs  generator1d.rs  generator2d.rs  gradient.rs  mod.rs  noise.rs
ofws_core/src/data/generator/gradient/: absolute.rs  circular.rs  linear.rs  mod.rs
ofws_core/src/data/generator1d/: mod.rs
ofws_core/src/data/generator2d/: composition.rs  mod.rs
ofws_core/src/data/generator2d/gradient/: absolute.rs  circular.rs  linear.rs  mod.rs
ofws_core/src/data/map/: attribute.rs  mod.rs
ofws_core/src/data/map/generation/: attribute.rs  biome.rs  distortion.rs  distortion1d.rs  distortion2d.rs  generator.rs  io.rs  mod.rs  modify.rs  step.rs  transformer.rs
ofws_core/src/data/map/generation/attributes/: attribute.rs  create.rs  distortion1d.rs  distortion2d.rs  generator.rs  mod.rs  modify.rs  transformer.rs
ofws_core/src/data/map/generation/distortion/: distortion2d.rs  mod.rs
ofws_core/src/data/math/: distance.rs  interpolation.rs  mod.rs  selector.rs  size2d.rs
ofws_core/src/data/math/generator/: generator1d.rs  generator2d.rs  gradient.rs  noise.rs
ofws_core/src/data/math/interpolation/: mod.rs  pair.rs  vector.rs
ofws_core/src/data/math/transformer/: clusterer2d.rs  mod.rs  threshold.rs  transformer1d.rs  transformer2d.rs
ofws_core/src/interface/: app.rs  mod.rs  rendering.rs
ofws_core/src/rendering/: tile.rs
ofws_core/src/rendering/cell/: mod.rs
ofws_noise/: Cargo.toml
ofws_noise/src/: lib.rs
ofws_rendering_glium/: Cargo.toml
ofws_rendering_glium/examples/: ascii.rs  colored.rs  input.rs  textured.rs
ofws_rendering_glium/src/: initialization.rs  input.rs  lib.rs  renderer.rs  vertex.rs  window.rs
ofws_rendering_glium/src/builder/: color.rs  texture.rs
resources/map_generation/: biome.yaml
