[package]
name = "ofws_core"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
svgbobdoc = "0.2"

[dev-dependencies]
ofws_rendering_glium = { path = "../ofws_rendering_glium" }
