[package]
name = "ofws_core"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.8.2"
log = "0.4"
num-integer = "0.1"
svgbobdoc = "0.2"
unwrap = "1.2"

[dev-dependencies]
ofws_noise = { path = "../ofws_noise" }
ofws_rendering_glium = { path = "../ofws_rendering_glium" }
