[package]
name = "ofws_core"
version = "0.2.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive-new = "0.5"
env_logger = "0.8"
log = "0.4"
noise = "0.7"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
svgbobdoc = "0.2"
unwrap = "1.2"

[dev-dependencies]
ofws_rendering_glium = { path = "../ofws_rendering_glium" }
