[package]
name = "ofws_rendering_glium"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
glium = "0.29"
image = "0.23"
log = "0.4"
ofws_core = { path = "../ofws_core" }
